Add new pages and update assets

--- a/home.html
+++ b/home.html
@@ -46,22 +46,22 @@
                 </div>
                 <div class="card-grid">
                     <a class="restaurant-card" href="restaurant.html" data-name="McDonald's">
-                        <div class="card-img"><img src="assets/mcdonalds.svg" alt="McDonald's"></div>
+                        <div class="card-img"><img src="assets/McDonald's_logo.svg.png" alt="McDonald's"></div>
                         <div class="card-title">McDonald's</div>
                         <div class="card-sub">4.7 ★ (500+) · 0.3 mi</div>
                     </a>
                     <a class="restaurant-card" href="restaurant.html" data-name="Chick-fil-A">
-                        <div class="card-img"><img src="assets/chickfila.svg" alt="Chick-fil-A"></div>
+                        <div class="card-img"><img src="assets/Chick-fil-A_Logo.svg.png" alt="Chick-fil-A"></div>
                         <div class="card-title">Chick-fil-A</div>
                         <div class="card-sub">4.2 ★ (500+) · 0.3 mi</div>
                     </a>
                     <a class="restaurant-card" href="restaurant.html" data-name="Taco Bell">
-                        <div class="card-img"><img src="assets/tacobell.svg" alt="Taco Bell"></div>
+                        <div class="card-img"><img src="assets/Taco BEll.png" alt="Taco Bell"></div>
                         <div class="card-title">Taco Bell</div>
                         <div class="card-sub">4.2 ★ (500+) · 0.3 mi</div>
                     </a>
                     <a class="restaurant-card" href="restaurant.html" data-name="Subway">
-                        <div class="card-img"><img src="assets/subway.svg" alt="Subway"></div>
+                        <div class="card-img"><img src="assets/Subway.png" alt="Subway"></div>
                         <div class="card-title">Subway</div>
                         <div class="card-sub">3.2 ★ (500+) · 0.3 mi</div>
                     </a>
@@ -70,37 +70,37 @@
                 <h3 class="section-title">Today Saving</h3>
                 <div class="card-grid">
                     <a class="restaurant-card" href="restaurant.html" data-name="Wendy's">
-                        <div class="card-img"><img src="assets/wendys.svg" alt="Wendy's"></div>
+                        <div class="card-img"><img src="assets/Wendy's.png" alt="Wendy's"></div>
                         <div class="card-title">Wendy's</div>
                         <div class="card-sub">4.7 ★ (500+) · 0.3 mi</div>
                     </a>
                     <a class="restaurant-card" href="restaurant.html" data-name="Burger King">
-                        <div class="card-img"><img src="assets/burgerking.svg" alt="Burger King"></div>
+                        <div class="card-img"><img src="assets/Burger_King_log.png" alt="Burger King"></div>
                         <div class="card-title">Burger King</div>
                         <div class="card-sub">4.7 ★ (500+) · 0.3 mi</div>
                     </a>
                     <a class="restaurant-card" href="restaurant.html" data-name="KFC">
-                        <div class="card-img"><img src="assets/kfc.svg" alt="KFC"></div>
+                        <div class="card-img"><img src="assets/Kfc_logo.png" alt="KFC"></div>
                         <div class="card-title">KFC</div>
                         <div class="card-sub">4.7 ★ (500+) · 0.3 mi</div>
                     </a>
                     <a class="restaurant-card" href="restaurant.html" data-name="Chipotle Mexican Grill">
-                        <div class="card-img"><img src="assets/chipotle.svg" alt="Chipotle"></div>
+                        <div class="card-img"><img src="assets/Chipotle.png" alt="Chipotle"></div>
                         <div class="card-title">Chipotle Mexican Grill</div>
                         <div class="card-sub">4.7 ★ (500+) · 0.3 mi</div>
                     </a>
                     <a class="restaurant-card" href="restaurant.html" data-name="Panda Express">
-                        <div class="card-img"><img src="assets/pandaexpress.svg" alt="Panda Express"></div>
+                        <div class="card-img"><img src="assets/1200px-Panda_Express_logo.svg.png" alt="Panda Express"></div>
                         <div class="card-title">Panda Express</div>
                         <div class="card-sub">4.6 ★ (500+) · 0.4 mi</div>
                     </a>
                     <a class="restaurant-card" href="restaurant.html" data-name="Panera Bread">
-                        <div class="card-img"><img src="assets/panera.svg" alt="Panera Bread"></div>
+                        <div class="card-img"><img src="assets/Panera-Bread-logo.jpg" alt="Panera Bread"></div>
                         <div class="card-title">Panera Bread</div>
                         <div class="card-sub">4.5 ★ (500+) · 0.5 mi</div>
                     </a>
                     <a class="restaurant-card" href="restaurant.html" data-name="Domino's">
-                        <div class="card-img"><img src="assets/dominos.svg" alt="Domino's"></div>
+                        <div class="card-img"><img src="assets/Dominos-Logo-1.png" alt="Domino's"></div>
                         <div class="card-title">Domino's</div>
                         <div class="card-sub">4.4 ★ (500+) · 0.6 mi</div>
                     </a>
