Major FrontDash application updates
- Enhanced address management with structured fields (street, city, state, zip, country)
- Added comprehensive order confirmation page with order number, date/time, and delivery estimates
- Implemented restaurant dashboard with full sidebar navigation functionality
- Added staff management system with secure password handling
- Created admin panels for registration queue, withdrawal queue, and staff management
- Enhanced payment page with customer details and billing address
- Added deals system with dynamic generation and claiming
- Improved location management with modal dialogs
- Removed SMS opt-in functionality for better user experience
- Added restaurant registration and login flows
- Enhanced menu management with add/edit/delete functionality
- Added hours of operation and contact information management
- Implemented password change functionality
- Added withdrawal request system
- Enhanced UI/UX across all pages with consistent styling
- Removed pickup options from customer-facing pages
- Added comprehensive form validation and error handling

--- a/pets.html
+++ b/pets.html
@@ -40,7 +40,7 @@
                     <a class="restaurant-card" href="#"><div class="card-img"></div><div class="card-title">PetSmart</div><div class="card-sub">Supplies & Grooming</div></a>
                     <a class="restaurant-card" href="#"><div class="card-img"></div><div class="card-title">Petco</div><div class="card-sub">Supplies & Vet</div></a>
                     <a class="restaurant-card" href="#"><div class="card-img"></div><div class="card-title">Pet Supplies Plus</div><div class="card-sub">Neighborhood store</div></a>
-                    <a class="restaurant-card" href="#"><div class="card-img"></div><div class="card-title">Chewy (Pickup partner)</div><div class="card-sub">Online-first</div></a>
+                    <a class="restaurant-card" href="#"><div class="card-img"></div><div class="card-title">Chewy</div><div class="card-sub">Online-first</div></a>
                 </div>
             </main>
         </div>
