--- a/checkout.html
+++ b/checkout.html
@@ -15,9 +15,9 @@
             <a class="icon-btn" href="restaurant.html">←</a>
             <div class="brand">FrontDash</div>
             <div class="header-actions">
-                <a class="pill" href="#" id="addressPill">🏠 123 main str</a>
-                <a class="icon-btn" href="#">🔔</a>
-                <a class="pill" href="checkout.html">🛒 <span id="cartCount">0</span></a>
+                <a class="pill" href="#" id="addressPill">🏠 10881 Sedalia Dr, McKinney, TX 75070 United States</a>
+                <a class="icon-btn notification-bell" href="#" title="notifications">🔔<span class="notification-count" style="display: none;">0</span></a>
+                <a class="pill" href="checkout.html">🛒 <span id="cartCount">1</span></a>
             </div>
         </header>
 
@@ -28,59 +28,58 @@
                 </div>
                 <div class="section-block">
                     <div class="block-title">2. Shipping details</div>
-                    <div class="address-hero">
-                        <div class="image-placeholder-sm"></div>
-                        <div class="delivery-toggle">
-                            <button class="btn-toggle active">Delivery</button>
-                            <button class="btn-toggle">Pickup</button>
-                        </div>
-                    </div>
                 </div>
                 <div class="section-block">
                     <div class="block-title">3. Payment details</div>
                     <div class="payment-list">
-                        <a class="payment-option" href="payment.html">Credit/Debit Card</a>
+                        <a class="payment-option" href="payment.html">Credit/De</a>
                         <a class="payment-option" href="payment.html">Paypal</a>
                         <a class="payment-option" href="payment.html">Venmo</a>
-                        <a class="payment-option" href="payment.html">Cash App Pay</a>
+                        <a class="payment-option" href="payment.html">Cash App</a>
                     </div>
                 </div>
             </section>
 
             <aside class="checkout-summary">
                 <div class="summary-card">
-                    <div class="summary-title">Your cart from <span id="summaryRestaurant">Whataburger</span></div>
-                    <div class="summary-items" id="summaryItems"></div>
-                    <div class="summary-row"><span>Subtotal</span><span id="subtotal">$0.00</span></div>
-                    <div class="summary-row"><span>Delivery Fee</span><span>$0.00</span></div>
-                    <div class="summary-row"><span>Fee & Estimated Tax</span><span id="fees">$0.00</span></div>
-                    <div class="summary-total"><span>Total</span><span id="total">$0.00</span></div>
-                    <a class="btn" href="payment.html" id="payBtn">Pay</a>
-
-                    <div class="address-row">
-                        <button class="address-btn" id="changeAddressBtn">🏠 10881 Sedalia Dr… ▸</button>
-                        <button class="address-btn">📞 (469)212-2341</button>
-                        <button class="address-btn">🎁 Send as a gift</button>
+                    <div class="summary-title">Your cart from <span id="summaryRestaurant">McDonald's</span></div>
+                    <div class="summary-items" id="summaryItems">
+                        <div class="summary-item">1 x Big Mac</div>
+                        <div class="summary-price">$5.99</div>
                     </div>
+                    <div class="summary-row"><span>Subtotal</span><span id="subtotal">$5.99</span></div>
+                    <div class="summary-row"><span>Delivery Fee</span><span>$0.00</span></div>
+                    <div class="summary-row"><span>Fee & Estimated Tax</span><span id="fees">$0.48</span></div>
+                    <div class="summary-total"><span>Total</span><span id="total">$6.47</span></div>
+                    <a class="btn" href="payment.html" id="payBtn">Pay</a>
                 </div>
             </aside>
         </main>
     </div>
 
-    <div class="modal" id="addressModal" hidden>
+    <!-- Address Change Modal -->
+    <div id="addressModal" class="modal-overlay" style="display: none;">
         <div class="modal-content">
             <div class="modal-header">
-                <div>Change address</div>
-                <button class="icon-btn" id="closeAddressModal">✕</button>
+                <h3>Change address</h3>
+                <button class="close-btn" id="closeAddressModal">&times;</button>
             </div>
             <div class="modal-body">
-                <label class="input">
-                    <input type="text" id="addressInput" placeholder="Address" value="10881 Sedalia Dr, McKinney, TX 75070 United States">
-                </label>
-                <button class="btn" id="confirmAddress">Confirm</button>
+                <div class="new-address">
+                    <label for="addressInput">Address:</label>
+                    <input type="text" id="addressInput" placeholder="Enter your address" value="10881 Sedalia Dr, McKinney, TX 75070 United States">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn-primary" id="confirmAddress">Confirm</button>
             </div>
         </div>
     </div>
+
+    <!-- Scripts -->
+    <script src="deals-data.js"></script>
+    <script src="deals.js"></script>
+    <script src="location.js"></script>
 
 </body>
 </html>
