--- a/restaurant.html
+++ b/restaurant.html
@@ -16,19 +16,17 @@
             <div class="brand"><a href="home.html" id="brandLink">FrontDash</a></div>
             <div class="header-actions">
                 <a class="pill" href="#" id="addressPill">🏠 123 main str</a>
-                <a class="icon-btn" href="#">🔔</a>
+                <a class="icon-btn notification-bell" href="#" title="notifications">🔔<span class="notification-count" style="display: none;">0</span></a>
                 <a class="pill" href="checkout.html">🛒 <span id="cartCount">0</span></a>
             </div>
         </header>
 
         <main class="restaurant-page">
-            <div class="hero"></div>
+            <div class="hero" style="background-image: url('assets/Hero image.png'); background-size: cover; background-position: center; background-repeat: no-repeat;"></div>
 
             <div class="restaurant-toolbar">
                 <div class="restaurant-name" id="restaurantName">Whataburger</div>
                 <div class="toolbar-controls">
-                    <button class="btn-toggle active" data-mode="delivery">Delivery</button>
-                    <button class="btn-toggle" data-mode="pickup">Pickup</button>
                     <div class="pill">28 min delivery time</div>
                 </div>
             </div>
@@ -63,6 +61,30 @@
         </main>
     </div>
 
+    <!-- Deals Modal -->
+    <div id="dealsModal" class="modal-overlay" style="display: none;">
+        <div class="modal-content deals-modal">
+            <div class="modal-header">
+                <h3>🎉 Special Deals</h3>
+                <button class="close-btn" id="closeDealsModal">&times;</button>
+            </div>
+            
+            <div class="modal-body">
+                <div id="dealsList" class="deals-list">
+                    <!-- Deals will be populated by JavaScript -->
+                </div>
+            </div>
+            
+            <div class="modal-footer">
+                <button class="btn-secondary" onclick="dealsManager.hideDealsModal()">Close</button>
+                <button class="btn-primary" onclick="dealsManager.generateDeals()">Get New Deals</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Scripts -->
+    <script src="deals-data.js"></script>
+    <script src="deals.js"></script>
     <script defer src="app.js"></script>
 </body>
 </html>
